--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
-    <script src="https://allfred-landingpage.bytriad.sk/js/lib/jquery-2.2.4.min.js"></script>
+    <!-- <script src="https://allfred-landingpage.bytriad.sk/js/lib/jquery-2.2.4.min.js"></script> -->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <link href="css/main.css" media="screen" rel="stylesheet" type="text/css" />
     <script src="js/main.js" type="text/javascript"></script>
