--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
-    <!-- <script src="https://allfred-landingpage.bytriad.sk/js/lib/jquery-2.2.4.min.js"></script> -->
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://allfred-landingpage.bytriad.sk/js/lib/jquery-2.2.4.min.js"></script>
 
     <link href="css/main.css" media="screen" rel="stylesheet" type="text/css" />
     <script src="js/main.js" type="text/javascript"></script>
@@ -66,7 +64,7 @@
                             <img src="images/logo.svg" alt="">
                         </div>
                         <div class="coming-soon">
-                            <p>Allfred app is comint soon</p>
+                            <p>Allfred app is coming soon</p>
                         </div>
                         <div class="title">
                             <h1>Business changing experience of <span>All</span>fred is coming to help you manage <span>all</span> you need.</h1>
@@ -78,7 +76,12 @@
                                     <input type="text" class="input" name="email" size="10" id="email" placeholder="Enter your email" required/>
                                     <input type="submit" class="btn" id="submit" value="Submit" />
                                 </div>
-                                <span class="aftersubmit">frontend.after_submit</span>
+                                <div class="aftersubmit">
+                                    <p>Ďakujeme.</p>
+                                </div>
+                                <div class="aftersubmit-error">
+                                    <p>Niečo sa pokazilo :(</p>
+                                </div>
                             </form>
                         </div>
                     </div>
