respo fix, added new image

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
     <div class="container-fluid h-100">
         <div class="row h-100">
-            <div class="col-12 col-lg-7 left d-none d-lg-block">
+            <div class="col-12 col-lg-7 left d-none d-lg-block overflow-hidden">
                 <div class="logo">
                     <img src="images/logo.svg" alt="">
                 </div>
@@ -59,7 +59,7 @@
             </div>
             <div class="col-12 col-lg-5 right">
                 <div class="container">
-                    <div class="row">
+                    <div class="row m-auto">
                         <div class="logo d-block d-lg-none">
                             <img src="images/logo.svg" alt="">
                         </div>
